Bug 184738 - Manage Templates button does not respond
Summary: Manage Templates button does not respond
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-18 01:10 UTC by Jonathan Gordon
Modified: 2009-02-21 02:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Gordon 2009-02-18 01:10:32 UTC
Version:           Version 4.2 rc1 (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

I'm running Kubuntu Intrepid Ibex and recently upgraded to KDE 4.2 via the instructions here:

http://www.kubuntu.org/news/kde-4.2

Ever since then, hitting the "Manage Templates..." button in Korganizer for either new or existing events does nothing. No error message, no dialog showing me my existing templates, nothing.

Interestingly, the mouseover text for the button is "Reset all items to their default values".

I can provide screen captures if that would be helpful.
Comment 1 Sergio Martins 2009-02-20 00:32:17 UTC
Fixed with commit 925470 and will be available in KDE-4.2.1

The tooltip is not right though.
Comment 2 Sergio Martins 2009-02-21 02:27:45 UTC
SVN commit 929303 by smartins:

Correct tooltip for the "Manage Templates" button.
Don't backport.

BUG: 184738


 M  +1 -0      koincidenceeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=929303