Correct tooltip for the "Manage Templates" button. Don't backport.

BUG: 184738

svn path=/trunk/KDE/kdepim/; revision=929303